# temp2

./: .env.example  .gitignore  demo_streamlit.py  getContentLength.py  pyproject.toml  requirements.txt  requirements_streamlit.txt
parser/: normal_file_extractor.py
src/: main.py  results.pkl
utils/normal_file/: __init__.py  docx_utils.py  pdf_utils.py  xlsx_utils.py
